--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,46 +1,111 @@
-
 *{
-      margin: 0;
+      margin:0 ;
       padding: 0;
       box-sizing: border-box;
 }
+.root{
+      --moderate-cyan: hsl(176, 50%, 47%);
+      --dark-cyan: hsl(176, 72%, 28%);
+      --black: hsl(0, 0%, 0%);
+      --dark-gray: hsl(0, 0%, 48%);
+      --bg-color:rgb( 188 188 188 /7%)
 
-body{
-
-      background-color: rgb(224, 129, 4)  ;
 }
-
-
+body{
+      background-color: rgb(13, 209, 243);
+      color: ver (--dark-gray);
+}
+h1, h2, h3, h4, h5, h6 {
+      color: ver(--black);
+}
 
 header{
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
-      height: 400px;  
-}
-.header-container{
-      width: 1100px;
-      margin: auto;
-      display: flex;
-      justify-content: space-between;
-     padding-top: 25px;
+      height: 400px;
 }
 
+.header-container{
+      padding-top: 30px;
+      width: 1100px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+}
 .list-items{
       list-style-type: none;
       display: flex;
 }
 .list-item{
       padding: 0 16px;
+
 }
 .nav-link{
       color: white;
-      text-decoration: none;
-      transition: all 0.3s ease-in-out;
+      text-decoration: none;  
+      transition: all 0.3s ease-in-out;    
 }
 
 .nav-link:hover {
-      color: rgb(214, 214, 214);
-      background-color: ;
+      color: rgb(214,214,214);
+}
+.container{
+      width: 600px;
+      margin: 0 auto;
+      background-color: #fff;
+      /* margin-top:-80px; */
+      position: relative;
+      top: -80px;
+      border-radius: 8px;
+      padding: 25px;
+}
+.secondary-logo{
+      position: absolute;
+      top: -30px;
+      left: 50%;
+      transform: translateX(-50%);
+}
+.section-heading{
+      text-align: center;
+      margin-top: 25px;
+      margin-bottom: 35px;
+}
+.section-heading h1 {
+      margin-bottom: 20px;
+}
+.buttons{
+      display: flex;
+      justify-content: space-between;
 
+}
+.buttons button{
+      border:0;
+      background-color: var(--dark-gray);
+      border-radius: 100px;
+      cursor: pointer;
+      padding: 8px 20px;
+      height: 50px;
+      color:white;
+}
+.buttons button:first-child{
+      
+      background-color: var(--moderate-cyan);
+      color: hsl(176, 50%, 47%);
+}
+.buttons button:last-child{
+      background-color: rgb(87, 80, 80);
+      color: grey;
+
+}
+.buttons button img{
+      width: 50px;
+      height: 50px;
+      position: relative;
+      left: -20px;
+}
+.buttons .bookmark {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
 }
