--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap');
+
+
 *{
       margin:0 ;
       padding: 0;
@@ -14,6 +17,8 @@
 body{
       background-color: rgb(13, 209, 243);
       color: ver (--dark-gray);
+      font-family: 'Commissioner', sans-serif;
+      font-size: 16px;
 }
 h1, h2, h3, h4, h5, h6 {
       color: ver(--black);
@@ -59,6 +64,7 @@ header{
       top: -80px;
       border-radius: 8px;
       padding: 25px;
+      margin-bottom: 25px;
 }
 .secondary-logo{
       position: absolute;
@@ -79,7 +85,7 @@ header{
       justify-content: space-between;
 
 }
-.buttons button{
+.btn {
       border:0;
       background-color: var(--dark-gray);
       border-radius: 100px;
@@ -87,15 +93,18 @@ header{
       padding: 8px 20px;
       height: 50px;
       color:white;
-}
-.buttons button:first-child{
       
-      background-color: var(--moderate-cyan);
-      color: hsl(176, 50%, 47%);
 }
-.buttons button:last-child{
-      background-color: rgb(87, 80, 80);
-      color: grey;
+.btn-primary{
+      background-color: var(--moderate-cyan);
+}
+.btn-primary :hover {
+            background-color: var(--moderate-cyan);
+}
+.btn-secondary{
+      background-color: rgb(148, 55, 55);
+      color: rgb(255, 185, 185);
+      font-weight: 500;
 
 }
 .buttons button img{
@@ -108,4 +117,83 @@ header{
       display: flex;
       align-items: center;
       justify-content: space-between;
+}
+
+.amount-wrapper{
+      display: flex;
+      justify-content: space-between;
+
+}
+
+.amount-col{
+      border-right: 1px solid #fff;
+}
+
+.amount-col:last-child{
+      border-right: 0px solid transparent;
+}
+
+
+.amount-col strong{
+      font-size: 40px;
+      color: hsl(0, 0%, 0%);
+      display: block;
+}
+
+.horizontal-bar{
+      position: relative;
+}
+
+.horizontal-bg{
+      background-color:white;
+}
+
+.horizontal-bg2{
+      background-color: green;
+     
+      width: 80%;
+}
+.horizontal-bg,.horizontal-bg2{
+      height: 8px;
+      border-radius: 30px;
+
+}
+/*PROJECT DETAILS*/
+.project-details h2,
+.project-details p{
+      margin-bottom: 25px;
+
+
+}
+.project-details{
+
+}
+/*REWARD CARD*/
+.reward-wrapper{
+     border: 1px solid red;
+     border-radius: 8px;
+     padding: 30px;
+}
+.reward-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+
+}
+.reward-wrapper p{
+      margin-bottom: 20px;
+
+}
+
+.reward-footer{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+}
+.reward-footer-left span{
+      font-size: 30px;
+      color: black;
+      font-weight: 700;
+      margin-right: 8px;
 }
